Fix alignment on all items on the homepage

--- a/src/app/components/content/app-home/home.component.scss
+++ b/src/app/components/content/app-home/home.component.scss
@@ -12,7 +12,7 @@
     background-attachment: fixed;
     align-items: center;
     justify-content: center;
-    
+
     @media screen and (max-width: 599px) {
       padding-top: 94px;
     }
@@ -61,6 +61,10 @@
 
       div {
         justify-content: space-between;
+
+        h2 {
+          margin-left: -20px;
+        }
       }
     }
 
